# ConversorExcelJson

./: conversor.py  pyproject.toml
